--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,10 +2,7 @@ doctype html
 html
     head
         title= title
-        link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-beta.35/css/uikit.min.css" )
-        script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js")
-        script(src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-beta.35/js/uikit.min.js")
-        script(src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-beta.35/js/uikit-icons.min.js")
+        script(src="/build/main.bundle.js")
     //link(rel='stylesheet', href='/stylesheets/style.css')
     body
         nav.uk-navbar-container(uk-navbar='')
