--- a/views/user/login.pug
+++ b/views/user/login.pug
@@ -20,7 +20,7 @@ block content
                     a(href="/users/create") &nbsp;don't have an account?
 
             .uk-width-1-2 Hello World
-    script(src="/javascripts/bundle.js")
+    script(src="/build/login.bundle.js")
 
 
 
